--- a/src/components/ReduxForms/HomeFiltersForm/HomeFiltersForm.scss
+++ b/src/components/ReduxForms/HomeFiltersForm/HomeFiltersForm.scss
@@ -13,120 +13,208 @@
     text-align: center;
   }
 }
-
-.home-filters-form {
-  height: 385px;
+.wrap-main-filter{
+  min-height: 385px;
   padding: 30px;
   background: #fff;
   border-radius: 10px;
-  display:grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap:0px 2%;
-  .block{
-    display: flex;
-    a{
-      width:100%;
-      margin-bottom: 20px;
-      margin-top: auto;
-    }
-    label{
+  .home-filters-form {
+
+    display:grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap:10px 2%;
+    .block{
       display: flex;
-      flex-direction: column;
-      font-size: 14px;
-      width: 100%;
-      select{
-        box-shadow: inset 0 0 4px 0 #dedede;
-        -webkit-appearance: none;
-        border: 0;
-        margin-top: 5px;
-        outline:none;
-        padding-right: 30px;
-        padding-left: 6px;
-        border: 1px solid #c9e8fb;
-        height: 41px;
-        border-radius: 5px;
-        background: url('/domlook/img/home-page/bo_pole.png') no-repeat;
-        background-size: cover;
-        background-position-y: -2px;
-        background-position-x: 0px;
-        box-shadow: 0;
-        font-size: 14px;
-        color: #414141;
-        font-weight: 300;
-        font-family: 'Roboto';
-
+      a{
+        width:100%;
+        // margin-bottom: 20px;
+        margin-top: auto;
       }
-      .wrap-price{
+      label{
         display: flex;
-        justify-content: space-between;
-        position: relative;
-        input{
-          max-width: 110px;
-          height: 39px;
-          margin-top: 5px;
-          border: 1px solid #c9e8fb;
-          font-size: 14px;
-          box-shadow: inset 0 0 4px 0 #dedede;
-          outline:none;
-          padding-left: 10px;
-          border-radius:5px;
-          background: #e0f2fd;
-          font-family: Roboto, Helvetica, Arial, sans-serif;
-          color: #394041;
-          font-size: 14px;
-        }
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button{
-          -webkit-appearance:none;
-        }
-        input:nth-of-type(2){
-          max-width: 130px;
-          width: 100%;
-          margin-left: 10px;
-          
-        }
-
+        flex-direction: column;
+        font-size: 12px;
+        width: 100%;
         select{
-          position: absolute;
-          right: 0;
-          top: 0;
-          max-width: 38px;
-          width: 100%;
-          height: 39px;
-          padding: 0;
+          box-shadow: inset 0 0 4px 0 #dedede;
+          -webkit-appearance: none;
           border: 0;
-          text-align-last:center;
-          // box-shadow: none!important;
-          // option{
-          //   text-align: center;
-          // }
-          background: #E0F2FD;
+          margin-top: 5px;
+          outline:none;
+          padding-right: 30px;
+          padding-left: 6px;
+          border: 1px solid #c9e8fb;
+          height: 41px;
+          border-radius: 5px;
+          background: url('/domlook/img/home-page/bo_pole.png') no-repeat;
+          background-size: cover;
+          background-position-y: -2px;
+          background-position-x: 0px;
+          box-shadow: 0;
+          font-size: 14px;
+          color: #414141;
+          font-weight: 300;
+          font-family: 'Roboto';
+  
         }
+        .wrap-price{
+          display: flex;
+          justify-content: space-between;
+          position: relative;
+          input{
+            max-width: 110px;
+            height: 41px;
+            margin-top: 5px;
+            border: 1px solid #c9e8fb;
+            font-size: 14px;
+            box-shadow: inset 0 0 4px 0 #dedede;
+            outline:none;
+            padding-left: 10px;
+            border-radius:5px;
+            background: #e0f2fd;
+            font-family: Roboto, Helvetica, Arial, sans-serif;
+            color: #394041;
+            font-size: 14px;
+          }
+          input::-webkit-outer-spin-button,
+          input::-webkit-inner-spin-button{
+            -webkit-appearance:none;
+          }
+          input:nth-of-type(2){
+            max-width: 130px;
+            width: 100%;
+            margin-left: 10px;
+            
+          }
+  
+          select{
+            position: absolute;
+            right: 0;
+            top: 0;
+            max-width: 38px;
+            width: 100%;
+            height: 41px;
+            padding: 0;
+            border: 0;
+            text-align-last:center;
+            // box-shadow: none!important;
+            // option{
+            //   text-align: center;
+            // }
+            background: #E0F2FD;
+          }
+        }
+   
       }
- 
+    }
+    button,
+    input[type="submit"]{
+      color: #fff;
+      text-align: center;
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      display: block;
+      border-radius: 5px;
+      background-position: center;
+      margin: auto 0;
+      height: 41px;
+      cursor: pointer;
+      font-size: 16px;
+      border: none;
+      background: url('/domlook/img/home-page/poisk.png') no-repeat;
+      background-size: cover;
+      transition: 0.3s;
+    }
+    button:hover,
+    input[type="submit"]:hover{
+      opacity:0.8;
+      transition: 0.3s;
     }
   }
-  button,
-  input[type="submit"]{
-    color: #fff;
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    display: block;
-    border-radius: 5px;
-    background-position: center;
-    margin: auto 0;
-    height: 40px;
-    cursor: pointer;
-    font-size: 16px;
-    border: none;
-    background: url('/domlook/img/home-page/poisk.png') no-repeat;
-    background-size: cover;
-    transition: 0.3s;
+
+  .additional-block-wrap{
+    margin-top: 20px;
+  
+    >button{
+      color: #43b7e8;
+      font-size: 14px;
+      position: relative;
+      padding-left: 20px;
+      transition: 0.2s;
+      i{
+        position: absolute;
+        left: 0;
+      }
+    }
+    >button:hover{
+      color: #007ba9;
+      transition: 0.2s;
+    }
+
+  
+
+   
+    .additional-block{
+      display: none;
+      justify-content: space-between;
+      input{
+        display: none;
+      }
+      label{
+        padding-left: 30px;
+        position: relative;
+        font-size: 14px;
+        margin-bottom: 10px;
+        height: 20px;
+        line-height: 24px;
+        cursor:pointer;
+      }
+      label:before{
+        content:'';
+        width: 20px;
+        height: 20px;
+        display: inline-block;
+        position: absolute;
+        left: 0;
+        border: 1px solid #ccc;
+      }
+      input:checked+label:after{
+        content:url('/domlook/img/home-page/checked.png');
+        position: absolute;
+        left: 4px;
+        top: 2px;
+      }
+      .parametrs,.terms{
+        p{
+          font-weight: bold;
+          font-size: 14px;
+          margin: 12px 0;
+        }
+      }
+      .parametrs{
+        display: flex;
+        flex-direction: column;
+        width:calc(100% - 270px);
+        .facilities{
+          display: flex;
+          flex-direction: column;
+          height: 160px;
+          flex-wrap:wrap;
+        }
+      }
+
+      .terms{
+        width: 240px;
+        display: flex;
+        flex-direction: column;
+      }
+    }
+    .additional-block.active{
+      display:flex;
+    }
+    
   }
-  input[type="submit"]:hover{
-    opacity:0.7;
-    transition: 0.3s;
-  }
+
 }
+
