--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -130,3 +130,27 @@
     }
   }
 }
+
+
+header{
+  .layerForm{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background: rgba(0,0,0,0.5);
+    display:flex;
+    justify-content: center;
+    .wrapForm{
+      top: 30%;
+      position: fixed;
+      background: #fff;
+      color:#000;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
+}
+
