--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   color: #fff;
+
   &__background-wrapper {
     position: absolute;
     top: 0;
@@ -12,6 +13,7 @@
     width: 100%;
     z-index: -1;
   }
+
   &__main-bg {
     position: absolute;
     top: 0;
@@ -20,6 +22,7 @@
     width: 100%;
     object-fit: cover;
   }
+
   &__overlay-1 {
     position: absolute;
     top: 0;
@@ -28,6 +31,7 @@
     width: 100%;
     background: rgba(0, 0, 0, 0.15);
   }
+
   &__overlay-2 {
     position: absolute;
     top: 60px;
@@ -42,10 +46,12 @@
   @include flex-style(flex, row, flex-end);
   height: 60px;
   padding: 10px 0;
+
   &__wrapper {
     @include flex-style(flex, row, space-between);
     width: 320px;
     position: relative;
+
     &:after {
       content: "";
       position: absolute;
@@ -57,11 +63,13 @@
       background: rgba(255, 255, 255, 0.15);
     }
   }
+
   &__button {
     height: 100%;
     position: relative;
     padding-left: 40px;
     font-size: 15px;
+
     &--favourites {
       &:before {
         content: "";
@@ -74,6 +82,7 @@
         background: url("/domlook/img/header/header-favourite-icon.png") no-repeat center;
       }
     }
+
     &--sign-in-up {
       &:before {
         content: "";
@@ -92,25 +101,30 @@
 .header-nav {
   @include flex-style(flex, row, space-between, center);
   height: 86px;
+
   &__logo-wrapper {
     @include flex-style(flex, row, space-between, center);
     height: 53px;
     width: 184px;
   }
+
   &__logo-1 {
     height: 53px;
     margin-right: 10px;
   }
+
   &__logo-2 {
     height: 34px;
   }
+
   &__button {
     height: 47px;
     width: 210px;
-    background: linear-gradient(0deg, rgba(239,99,1,1) 0%, rgba(255,197,41,1) 100%);
+    background: linear-gradient(0deg, rgba(239, 99, 1, 1) 0%, rgba(255, 197, 41, 1) 100%);
     border-radius: 5px;
   }
-  >div{
+
+  >div {
     display: flex;
     align-items: center;
   }
@@ -120,11 +134,14 @@
   &__list {
     @include flex-style(flex);
   }
+
   &__item:not(:last-child) {
     margin-right: 26px;
   }
+
   &__link {
     padding-bottom: 5px;
+
     &--active {
       border-bottom: 1.5px solid #fff;
     }
@@ -132,25 +149,265 @@
 }
 
 
-header{
-  .layerForm{
+header {
+  .layerForm {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: 2;
-    background: rgba(0,0,0,0.5);
-    display:flex;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
     justify-content: center;
-    .wrapForm{
-      top: 30%;
+
+   
+  }
+  .layerForm.hidden{
+      display: none;
+  }
+  .hidden-wrap{
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    .wrapForm {
+      top: 120px;
       position: fixed;
       background: #fff;
-      color:#000;
+      color: #000;
       margin-left: auto;
       margin-right: auto;
-    }
+      max-width: 480px;
+      width: 100%;
+      z-index:2;
+      
+      .soc-block{
+        p:first-of-type{
+          text-align: center;
+          margin-top: 25px;
+          margin-bottom: 20px;
+          font-size: 14px;
+          a{
+            color:#256799;
+       
+          }
+        }
+        p:nth-of-type(2){
+          font-size: 14px;
+          text-align: center;
+          margin-bottom: 25px;
+          overflow:hidden;
+          span{
+            position: relative;
+            background: #fff;
+            z-index: 1;
+            padding: 0 10px;
+          }
+          span:before{
+            content:'';
+            width:200%;
+            height: 1px ;
+            display: inline-block;
+            background: #eee; position: absolute;
+            left: -150%;
+            top: 50%;
+            z-index: -1;
+          }
+          span:after{
+            content:'';
+            width:200%;
+            height: 1px ;
+            display: inline-block;
+            background: #eee; position: absolute;
+            right: -150%;
+            top: 50%;
+            z-index: -1;
+          }
+        }
+
+        .soc-icons{
+          margin-bottom: 20px;
+          display: flex;
+          justify-content: center;
+          a{
+            display: flex;
+            align-items:center ;
+            justify-content: center;
+            width: 55px;
+            height: 55px;
+            margin: 0 15px;
+            i{
+              color:#fff;
+              font-size: 25px;
+            }
+          }
+          a:nth-of-type(1){
+            background-color:#3b5998;
+            transition:0.2s;
+          }
+          a:nth-of-type(1):hover{
+            background-color:#256799;
+            transition:0.2s;
+          }
+          a:nth-of-type(2){
+            background-color:#dd4b39;
+            transition:0.2s;
+          }
+          a:nth-of-type(2):hover{
+            background-color:#1da1f2;
+            transition:0.2s;
+          }
+          a:nth-of-type(3){
+            background-color:#1da1f2;
+            transition:0.2s;
+          }
+          a:nth-of-type(3):hover{
+            background-color:#000;
+            transition:0.2s;
+          }
+          a:nth-of-type(4){
+            background-color:#45668e;
+            transition:0.2s;
+          }
+          a:nth-of-type(4):hover{
+            background-color:#256799;
+            transition:0.2s;
+          }
+        }
+      }
+
+        .top-form {
+        padding: 25px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        border-bottom: 1px solid #ddd;
+  
+        label {
+          cursor: pointer;
+          display: block;
+          text-align: center;
+          position: relative;
+          z-index:1;
+        }
+        label.active-link:after {
+          content:'';
+          position: absolute;
+          bottom: -10px;
+          left: 50%;
+          transform: translateX(-50%);
+          display: inline-block;
+          width: 60%;
+          height: 2px;
+          background: #4dc7ec;
+  
+        }
+
+      }
+      .top-form.reg{
+        label.active-link{
+          position: relative;
+          color:#4dc7ec;
+        }
+
+        label.active-link:after{
+          content:'';
+          width: 70px;
+          height: unset;
+          border-bottom: dotted 1px #4dc7ec;
+          background: none;
+          box-shadow: none;
+          color: #4dc7ec;
+          bottom: -2px;
+        }
+      }
+
+  
+      .body-form {
+  
+        padding:15px;
+        #registrationForm{
+          margin-top: -15px;
+        }
+        form {
+          display: flex;
+          flex-direction: column;
+  
+          .field-wrap {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            grid-column-gap: 20px;
+          }
+  
+          input:not([type='submit']) {
+            height: 41px;
+            padding: 0 10px;
+            margin-bottom: 15px;
+            box-shadow: inset 0 0 2px #e9e9e9;
+            border: 1px solid #cdcdcd;
+            font-size: 16px;
+          }
+          input:not([type='submit'])+.error-field{
+            color:red;
+            font-size: 14px;
+            margin-top: -10px;
+            margin-bottom: 5px;
+            display: none;
+            position: absolute;
+          }
+  
+          input:not([type='submit']):focus {
+            border-color: #e9322d;
+            box-shadow: 0 0 6px #f8b9b7;
+            outline: none;
+          
+          }
+  
+          input[type="submit"] {
+            background: #4dc7ec;
+            font-size: 17px;
+            color: #fff;
+            border-radius: 0;
+            height: 58px;
+            border: 0;
+            cursor: pointer;
+          }
+          .react-tel-input {
+            margin-bottom: 20px;
+          }
+    
+          .react-tel-input .form-control {
+            width: 100%;
+            padding-left: 50px;
+            border-radius: 0;
+          }
+        }
+        #loginForm+label{
+          margin-top: 10px;
+          font-size: 14px;
+        }
+
+        label {
+          display: block;
+          cursor: pointer;
+          position: relative;
+          z-index:1;
+        }
+  
+       
+
+  
+
+      }
+    }  
+    
+  }
+ 
+
+  .hidden-wrap.hidden{
+    display: none;
   }
 }
-
