--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -63,6 +63,11 @@
       background: rgba(255, 255, 255, 0.15);
     }
   }
+  &__wrapper-logged{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
 
   &__button {
     height: 100%;
@@ -93,6 +98,72 @@
         height: 100%;
         width: 20px;
         background: url("/domlook/img/header/header-user-icon.png") no-repeat center;
+      }
+    }
+
+    &--spriel{
+      &:before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 20px;
+        background: url("/domlook/img/header/sr.png") no-repeat center;
+      }
+    }
+    &--profile{
+      &:before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 20px;
+        background: url("/domlook/img/header/pr.png") no-repeat center;
+      }
+    }
+    &--s-ch{
+      &:before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 20px;
+        background: url("/domlook/img/header/s4.png") no-repeat center;
+      }
+    }
+    &--dob{
+      &:before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 20px;
+        background: url("/domlook/img/header/dob.png") no-repeat center;
+      }
+    }
+    &--mo{
+      &:before{
+        content: "";
+        position: absolute;
+        top: 50%;
+        left: 10px;
+        transform: translateY(-50%);
+        height: 100%;
+        width: 20px;
+        background: url("/domlook/img/header/mo.png") no-repeat center;
+      }
+    }
+    &--exit{
+      i{
+        margin-right: 10px;
       }
     }
   }
@@ -184,7 +255,7 @@ header {
       max-width: 480px;
       width: 100%;
       z-index:2;
-      
+
       .soc-block{
         p:first-of-type{
           text-align: center;
@@ -349,14 +420,15 @@ header {
             box-shadow: inset 0 0 2px #e9e9e9;
             border: 1px solid #cdcdcd;
             font-size: 16px;
+            width: 100%;
           }
           input:not([type='submit'])+.error-field{
             color:red;
             font-size: 14px;
             margin-top: -10px;
             margin-bottom: 5px;
-            display: none;
-            position: absolute;
+            // display: none;
+            // position: absolute;
           }
   
           input:not([type='submit']):focus {
@@ -386,8 +458,10 @@ header {
           }
         }
         #loginForm+label{
-          margin-top: 10px;
-          font-size: 14px;
+          margin-top: 20px;
+          font-size: 12px;
+          color: #4dc7ec;
+          
         }
 
         label {
