--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -255,7 +255,11 @@ header {
       max-width: 480px;
       width: 100%;
       z-index:2;
-
+      label[for="repairFormButton"]{
+        font-size: 12px;
+        color: #4dc7ec;
+        margin-top: 20px;
+      }
       .soc-block{
         p:first-of-type{
           text-align: center;
@@ -406,7 +410,18 @@ header {
         form {
           display: flex;
           flex-direction: column;
+  >label{
+    position: relative;
   
+  }
+  .error-field{
+    color:red;
+    font-size: 12px;
+    margin-top: -20px;
+    // margin-bottom: 5px;
+    // display: none;
+    position: absolute;
+  }
           .field-wrap {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -416,20 +431,13 @@ header {
           input:not([type='submit']) {
             height: 41px;
             padding: 0 10px;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             box-shadow: inset 0 0 2px #e9e9e9;
             border: 1px solid #cdcdcd;
             font-size: 16px;
             width: 100%;
           }
-          input:not([type='submit'])+.error-field{
-            color:red;
-            font-size: 14px;
-            margin-top: -10px;
-            margin-bottom: 5px;
-            // display: none;
-            // position: absolute;
-          }
+          
   
           input:not([type='submit']):focus {
             border-color: #e9322d;
