--- a/src/components/DetailsPage/DetailsPage.scss
+++ b/src/components/DetailsPage/DetailsPage.scss
@@ -88,12 +88,13 @@
   }
   &__action {
     width: fit-content;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     padding-left: 30px;
     color: $orange-color;
     font-size: 14px;
     font-weight: 700;
     background-repeat: no-repeat;
+    background-size: contain;
   }
 
   &__action.tel-button{
