--- a/src/components/ReduxForms/NewsFiltersForm/NewsArchivesFilters/NewsArchivesFilters.scss
+++ b/src/components/ReduxForms/NewsFiltersForm/NewsArchivesFilters/NewsArchivesFilters.scss
@@ -2,7 +2,51 @@
 
 .archives-filters {
   width: 100%;
-  height: 500px;
+  // height: 500px;
   padding: 20px;
   border: 1px solid $news-filters-border-color-grey;
+padding-bottom: 40px;
+  h3{
+    font-size: 21px;
+    line-height: 24px;
+    font-weight: 400;
+    margin: 0 0 16px;
+    background-color: #fff;
+}
+  ul{
+
+    li{
+      
+      padding: 8px 0 8px 14px;
+      position: relative;
+      border-bottom: 1px solid #ccc;
+      cursor:pointer;
+      color: #75797A;
+      font-size: 13px;
+      line-height: 20px;
+      transition: 0.2s;
+    }
+    li:hover {
+      transition: 0.2s;
+      color: rgb(37, 103, 153);
+    }
+
+    li.active {
+      color: rgb(37, 103, 153);
+      font-weight: 500;
+    }
+    li:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      transform: translateY(-50%);
+      display: inline-block;
+      width: 0;
+      height: 0;
+      border: 3px solid transparent;
+      border-left: 4px solid green;
+    }
+
+  }
 }
