--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -13,25 +13,40 @@
     font-size: 14px;
   }
 }
-
+.foot-wrap-link{
+  display: flex;
+}
 .footer-socials {
   @include flex-style(flex, column);
   &__logo-link {
     padding-right: 10px;
+    margin-left: -10px;
   }
   &__list {
     @include flex-style(flex, row, space-between);
+    max-width: 170px;
   }
 }
-
+.footer-usefull-links{
+  .footer-list{
+    min-width:185px
+  }
+}
 .footer-cities {
+  padding-left: 20px;
+  width: 100%;
   @include flex-style(flex);
   .footer-list{
     display:grid;
     grid-auto-flow: column;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap:5px 10px;
+    padding-left: 0;
+    width: 100%;
     li{
       margin-bottom: 0;
+      a{white-space: nowrap;}
     }
     // a{font-size: 13px;}
   }
@@ -62,5 +77,81 @@
   }
   &__link {
     margin-top: 7px;
+  }
+}
+
+
+
+@media screen and (max-width: 1200px){
+  .footer__block{
+    flex-direction: column;
+  }
+  .footer-socials{
+    max-width: 180px;
+    margin: 0 auto 50px;
+  }
+  .footer-socials__logo-link{
+    margin-bottom: 20px;
+    margin-left: -10px;
+  }
+  .footer-cities,
+  .footer-list{
+    padding-left: 0;
+  }
+  .news-filters{
+    margin-right: 0;
+  }
+  .heading-filters{
+    height: 100%;
+  }
+}
+@media screen and (max-width: 1070px){
+  .foot-wrap-link{
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-usefull-links{
+    margin-top: 40px;;
+  }
+}
+
+@media screen and (max-width: 991px){
+  .footer-cities .footer-list{
+    grid-template-columns:repeat(2,1fr);
+
+  }
+}
+
+
+@media screen and (max-width: 820px){
+  .footer-cities{
+    max-width: 400px;
+  }
+  .footer-cities .footer-list {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: repeat(13, 1fr);
+}
+}
+@media screen and (max-width: 576px){
+  .footer-settings{
+    flex-direction: column-reverse;
+  }
+  .footer-settings button{
+    margin-bottom: 10px;
+    white-space: nowrap;
+  }
+}
+@media screen and (max-width: 420px){
+  .footer-cities .footer-list{
+    grid-template-columns:1fr;
+    grid-auto-flow: row;
+    text-align: center;
+  }
+  .footer-usefull-links{
+    text-align: center;
+  }
+  .footer-copyrights{
+    text-align: center;
   }
 }
