--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -12,10 +12,18 @@ a {
 }
 
 .container {
-  max-width: 1140px;
+  max-width: 1200px;
+  padding: 0 35px;
   margin: 0 auto;
 }
 
 #root{
   position: relative;
+}
+
+
+@media screen and (max-width: 576px){
+  .container{
+    padding: 0 20px;
+  }
 }
