--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,5 +1,7 @@
 @import "../../styles/utils";
-
+.header-2{
+  display: none;
+}
 .header {
   width: 100%;
   height: 100%;
@@ -514,14 +516,12 @@ header {
             border-radius: 0;
           }
         }
-
         #loginForm+label {
           margin-top: 20px;
           font-size: 12px;
           color: #4dc7ec;
 
         }
-
         label {
           display: block;
           cursor: pointer;
@@ -529,15 +529,10 @@ header {
           z-index: 1;
         }
 
-
-
-
-
       }
     }
 
   }
-
 
   .hidden-wrap.hidden {
     display: none;
@@ -592,8 +587,6 @@ header {
       position: relative;
     }
 
-    ;
-
     span:before {
       content: '';
       display: inline-block;
@@ -631,7 +624,11 @@ header {
     height: 0;
     visibility: hidden;
   }
-
+  .mobile-menu-wrap.show{
+    height: 100%;
+    visibility: visible;
+    transition: 0.3s;
+  }
   .header__overlay-1 {
     height: 0;
   }
